--- a/templates/base.html
+++ b/templates/base.html
@@ -22,6 +22,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('create_listing') }}">Create Listing</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('manage_categories') }}">Manage Categories</a>
+                    </li>
                 </ul>
             </div>
         </div>
